# legacylisten

./: .gitignore  Cargo.toml  README.md
doc/: book.toml
doc/src/: SUMMARY.md  german.md
src/: audio.rs  buffer.rs  conffile.rs  config.rs  csv.rs  dbus.rs  err.rs  files.rs  helpers.rs  lib.rs  main.rs  matcher.rs  parser.rs  runner.rs  songs.rs  threads.rs
src/commands/: impls.rs  mod.rs
src/l10n/: english.rs  german.rs  messages.rs  mod.rs
