[package]
name = "legacylisten"
version = "0.1.2"
authors = ["Matthias Kaak <m.kaak@protonmail.ch>"]
edition = "2021"
description = "A simple CLI audio player with strange features."
license = "GPL-3.0-or-later"
repository = "https://github.com/zvavybir/legacylisten/"
documentation = "https://docs.rs/legacylisten"
homepage = "https://zvavybir.github.io/"
readme = "README.md"
keywords = ["cli", "audio"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
either = "1.6.1"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
home = "0.5.3"
id3 = "1.0.2"
log = "0.4.16"
mp3-metadata = "0.3.3"
nix = "0.24.1"
num_enum = "0.5.7"
ogg_metadata = "0.4.1"
rand = "0.8.5"
rodio = "0.15.0"
signal-hook = "0.3.13"
simple_logger = "2.1.0"
trash = "2.0.4"
unic-langid = "0.9.0"
walkdir = "2.3.2"
